packages/components/src/components/Tabs/Tabs.module.css
.container {
  display: flex;
  gap: var(--kbq-size-m);
}

.base {
  display: flex;
  position: relative;
}

.scrollArea {
  display: flex;
  position: relative;
  flex: 0 1 auto;
  min-inline-size: 0;
}

.scrollBox {
  --mask-size: 32px;

  &[data-overflow-inline-start] {
    mask-image: linear-gradient(
      to right,
      transparent var(--mask-size),
      #000 calc(var(--mask-size) * 1.5)
    );
  }

  &[data-overflow-inline-end] {
    mask-image: linear-gradient(
      to right,
      #000 calc(100% - var(--mask-size) * 1.5),
      transparent calc(100% - var(--mask-size))
    );
  }

  &[data-overflow-inline-start][data-overflow-inline-end] {
    mask-image: linear-gradient(
      to right,
      transparent var(--mask-size),
      #000 calc(var(--mask-size) * 1.5),
      #000 calc(100% - var(--mask-size) * 1.5),
      transparent calc(100% - var(--mask-size))
    );
  }
}

.tabList {
  flex-grow: 1;
  display: flex;
  position: relative;
}

.underlined {
  .base::after {
    content: '';
    inset-inline: 0;
    inset-block-end: 0;
    position: absolute;
    block-size: var(--kbq-size-border-width);
    background: var(--kbq-line-contrast-less);
    z-index: calc(var(--kbq-layer-absolute) + 3);
  }
}

.horizontal {
  flex-direction: column;

  .scrollBox {
    display: flex;
    inline-size: 100%;
    scrollbar-width: none;
    overflow: auto hidden;
  }

  .tabList {
    flex-direction: row;
  }
}

.vertical {
  .base {
    flex-direction: column;
    min-block-size: 0;
  }

  .scrollArea {
    flex: 1 1 auto;
    min-block-size: 0;
  }

  .scrollBox {
    --mask-size: var(--kbq-size-3xl);

    inline-size: auto;
    display: inline-block;
    overflow: hidden auto;

    &[data-overflow-block-start][data-overflow-block-end] {
      mask-image: linear-gradient(
        to bottom,
        transparent 0,
        #000 var(--mask-size),
        #000 calc(100% - var(--mask-size)),
        transparent 100%
      );
    }

    &[data-overflow-block-start]:not([data-overflow-block-end]) {
      mask-image: linear-gradient(
        to bottom,
        transparent 0,
        #000 var(--mask-size)
      );
    }

    &:not([data-overflow-block-start])[data-overflow-block-end] {
      mask-image: linear-gradient(
        to bottom,
        #000 calc(100% - var(--mask-size)),
        transparent 100%
      );
    }
  }

  .tabList {
    flex-direction: column;
  }
}

.stretched {
  .scrollArea {
    inline-size: 100%;
  }

  .scrollBox {
    overflow: hidden;
  }
}

